# UpSetPlot

./: README.rst  pyproject.toml  setup.cfg  setup.py
upsetplot/: __init__.py  data.py
