[metadata]
description = Draw UpSet plots with Pandas and Matplotlib (maintained fork for BombCell)
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Joel Nothman
author_email = joel.nothman@gmail.com
maintainer = Julie Fabre
url = https://github.com/Julie-Fabre/UpSetPlot
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Visualization
    Intended Audience :: Science/Research

[aliases]
test = pytest

[tool:pytest]
addopts = --doctest-modules --verbose --cov=upsetplot --showlocals
# --cov=upsetplot
testpaths = upsetplot README.rst
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE ELLIPSIS

[flake8]
ignore = W503,W504
